--- a/docker-compose.portainer-agent+nginx-proxy-manager.yml
+++ b/docker-compose.portainer-agent+nginx-proxy-manager.yml
@@ -1,15 +1,15 @@
 version: "3.7"
 
 services:
-  portainer:
-    image: portainer/portainer-ce:latest
-    container_name: portainer
+  portainer_agent:
+    image: portainer/agent
+    container_name: portainer_agent
     restart: always
     volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-        - ./portainer_data:/data
+        - /var/run/docker.sock:/var/run/docker.sock 
+        - /var/lib/docker/volumes:/var/lib/docker/volumes
     ports:
-      - 9000:9000
+      - 9001:9001
 
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
@@ -24,7 +24,6 @@ services:
       - ./letsencrypt:/etc/letsencrypt
 
 volumes:
-  portainer_data:
   nginx-proxy-manager:
 
 networks:
