--- a/compose/portainer-ce+nginx-proxy-manager.yml
+++ b/compose/portainer-ce+nginx-proxy-manager.yml
@@ -11,9 +11,9 @@ services:
     ports:
       - 9000:9000
 
-  nginx-proxy-manager:
+  nginx_proxy_manager:
     image: jc21/nginx-proxy-manager:latest
-    container_name: nginx-proxy-manager
+    container_name: nginx_proxy_manager
     restart: always
     ports:
       - 80:80
